--- a/style.css
+++ b/style.css
@@ -84,8 +84,9 @@ ul {list-style: none;
   flex-direction: column;
   gap: 16px;
   padding: 24px 0px;
-  
+  margin: 0 60px;
 }
+
 ul li a{
   display: flex;
   padding: 16px 24px;
